@@ -1,4 +1,4 @@
-.\" $NetBSD: gpio.4,v 1.24 2012/12/16 13:13:35 mbalmer Exp $
+.\" $NetBSD: gpio.4,v 1.25 2013/06/10 07:14:01 kardel Exp $
 .\"	$OpenBSD: gpio.4,v 1.5 2004/11/23 09:39:29 reyk Exp $
 .\"
 .\" Copyright (c) 2004 Alexander Yurchenko <grange@openbsd.org>
@@ -29,6 +29,7 @@
 .Cd "gpio* at gscpcib?"
 .Cd "gpio* at ichlpcib?"
 .Cd "gpio* at nsclpcsio?"
+.Cd "gpio* at soekrisgpio?"
 .Cd "gpio* at ppbus?"
 .Cd "gpio* at ptcd?"
 .Pp
